INTYGFV-15057: Implemented remaining questions for Mediciskt underlag including tests and some fixtures and live templates.